microservices-comparison/sistema-monolitico/k8s/monolithic-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolithic-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolithic-db
  template:
    metadata:
      labels:
        app: monolithic-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: monolithic-db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: monolithic-db-storage
          emptyDir: {}
