microservices-comparison/sistema-monolitico/k8s/monolithic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolithic-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolithic
  template:
    metadata:
      labels:
        app: monolithic
    spec:
      containers:
        - name: monolithic
          image: tu-usuario/monolithic-app:latest  # Reemplaza con tu imagen en Docker Hub
          ports:
            - containerPort: 3000
