microservices-comparison/sistema-monolitico/k8s/monolithic-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolithic-db
spec:
  selector:
    app: monolithic-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None  # Para permitir conexión dentro del clúster
