microservices-comparison/sistema-monolitico/k8s/monolithic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolithic-service
spec:
  selector:
    app: monolithic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort  # Cambia a LoadBalancer si lo necesitas
