microservices-comparison/sistema-monolitico/k8s/monolithic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monolithic-ingress
spec:
  rules:
    - host: monolith.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monolithic-service
                port:
                  number: 80
